[package]
name = "nrfdfu-ble"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
btleplug = "0.11.0"
clap = { version = "4.4.0", features = ["derive"] }
crc32fast = "1.3.2"
futures = "0.3.28"
num_enum = "0.6.1"
serde_json = "1.0.105"
tokio = { version = "1.29.1", features = ["full"] }
uuid = "1.4.1"
zip = "2.6.1"
