[package]
name = "nrfdfu-ble"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
btleplug = "0.11.8"
clap = { version = "4.5.41", features = ["derive"] }
crc32fast = "1.5.0"
futures = "0.3.31"
indicatif = "0.18.0"
num_enum = "0.7.4"
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
uuid = "1.17.0"
zip = "4.3.0"
